Ensure that entries list looks good on both mobile and desktop screens -- hide villager icons on small screens #2

--- a/css/layout.css
+++ b/css/layout.css
@@ -49,3 +49,9 @@
     width: 50%;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .villager-icon-holder {
+    display: none;
+  }
+}
